--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
 <table>
 <thead>
 <tr>
@@ -387,43 +387,90 @@
 <tbody>
 <tr>
 <td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Kevin</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>bill</td>
+<td>102,000</td>
+</tr>
+<tr>
+<td>1t</td>
 <td>patc</td>
 <td>102,000</td>
 </tr>
 <tr>
-<td>2</td>
-<td>bill</td>
-<td>98,000</td>
-</tr>
-<tr>
 <td>3</td>
 <td>Maryjean</td>
-<td>85,000</td>
+<td>97,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Norma1</td>
-<td>64,500</td>
+<td>74,500</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Nana_Sharon</td>
-<td>64,000</td>
+<td>66,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>JoAnnmeme</td>
-<td>58,000</td>
+<td>59,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>PaPaLarry</td>
-<td>50,000</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>Kevin</td>
-<td>4,000</td>
+<td>12,000</td>
 </tr>
 </tbody>
 </table>
