--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Kevin</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -384,28 +431,28 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>112,000</td>
+<td>patc</td>
+<td>118,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Maryjean</td>
-<td>109,000</td>
+<td>bill</td>
+<td>114,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
-<td>108,000</td>
+<td>Maryjean</td>
+<td>110,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Norma1</td>
-<td>83,500</td>
+<td>95,500</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Nana_Sharon</td>
-<td>82,000</td>
+<td>88,000</td>
 </tr>
 <tr>
 <td>6</td>
@@ -415,12 +462,12 @@
 <tr>
 <td>7</td>
 <td>PaPaLarry</td>
-<td>59,000</td>
+<td>63,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>Kevin</td>
-<td>30,000</td>
+<td>38,000</td>
 </tr>
 </tbody>
 </table>
