--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>JoAnnmeme</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Kevin</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -384,43 +431,43 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>128,000</td>
+<td>JoAnnmeme</td>
+<td>1,083,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>bill</td>
-<td>126,000</td>
+<td>PaPaLarry</td>
+<td>1,019,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
-<td>124,000</td>
+<td>Norma1</td>
+<td>997,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>102,000</td>
+<td>bill</td>
+<td>976,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Norma1</td>
-<td>97,500</td>
+<td>Maryjean</td>
+<td>928,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>JoAnnmeme</td>
-<td>83,000</td>
+<td>Kevin</td>
+<td>804,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>PaPaLarry</td>
-<td>69,000</td>
+<td>Nana_Sharon</td>
+<td>802,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>Kevin</td>
-<td>54,000</td>
+<td>patc</td>
+<td>124,000</td>
 </tr>
 </tbody>
 </table>
