--- a/scores/index.html
+++ b/scores/index.html
@@ -362,7 +362,7 @@
 </tr>
 </tbody>
 </table>
-<h1 id="month-point-totals">Month Point Totals</h1>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
 <table>
 <thead>
 <tr>
@@ -374,7 +374,7 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Norma1</td>
+<td>Maryjean</td>
 <td>12,000</td>
 </tr>
 <tr>
@@ -384,17 +384,74 @@
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
+<td>Norma1</td>
 <td>8,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Maryjean</td>
+<td>JoAnnmeme</td>
 <td>6,000</td>
 </tr>
 <tr>
 <td>5</td>
+<td>Kevin</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
 <td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
+<h1 id="month-point-totals">Month Point Totals</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1t</td>
+<td>Norma1</td>
+<td>20,000</td>
+</tr>
+<tr>
+<td>1t</td>
+<td>PaPaLarry</td>
+<td>20,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>18,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>5,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Kevin</td>
 <td>4,000</td>
 </tr>
 </tbody>
