--- a/index.html
+++ b/index.html
@@ -355,6 +355,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Kevin</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -368,37 +405,37 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>72,000</td>
+<td>84,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Norma1</td>
-<td>68,500</td>
+<td>72,500</td>
 </tr>
 <tr>
-<td>3</td>
+<td>3t</td>
+<td>JoAnnmeme</td>
+<td>66,000</td>
+</tr>
+<tr>
+<td>3t</td>
 <td>PaPaLarry</td>
 <td>66,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>JoAnnmeme</td>
-<td>56,000</td>
+<td>5</td>
+<td>Kevin</td>
+<td>54,500</td>
 </tr>
 <tr>
-<td>5</td>
+<td>6</td>
 <td>bill</td>
 <td>50,000</td>
 </tr>
 <tr>
-<td>6</td>
-<td>Kevin</td>
-<td>48,500</td>
-</tr>
-<tr>
 <td>7</td>
 <td>Nana_Sharon</td>
-<td>32,500</td>
+<td>40,500</td>
 </tr>
 <tr>
 <td>8</td>
