--- a/scores/index.html
+++ b/scores/index.html
@@ -362,6 +362,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Kevin</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>800,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -374,33 +411,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>98,000</td>
+<td>Kevin</td>
+<td>1,072,500</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Norma1</td>
-<td>86,500</td>
+<td>PaPaLarry</td>
+<td>1,020,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Kevin</td>
-<td>72,500</td>
+<td>Nana_Sharon</td>
+<td>964,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>JoAnnmeme</td>
-<td>72,000</td>
+<td>Norma1</td>
+<td>936,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>PaPaLarry</td>
-<td>70,000</td>
+<td>Maryjean</td>
+<td>898,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Nana_Sharon</td>
-<td>64,500</td>
+<td>JoAnnmeme</td>
+<td>72,000</td>
 </tr>
 <tr>
 <td>7</td>
