--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Kevin</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>JoAnnmeme</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Norma1</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -385,37 +432,37 @@
 <tr>
 <td>1</td>
 <td>Kevin</td>
-<td>55,000</td>
+<td>67,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Nana_Sharon</td>
-<td>54,000</td>
+<td>58,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Maryjean</td>
-<td>47,000</td>
+<td>55,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>JoAnnmeme</td>
-<td>38,500</td>
+<td>40,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Norma1</td>
-<td>36,000</td>
+<td>PaPaLarry</td>
+<td>39,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>PaPaLarry</td>
-<td>33,000</td>
+<td>Norma1</td>
+<td>37,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>bill</td>
-<td>26,000</td>
+<td>36,000</td>
 </tr>
 <tr>
 <td>8</td>
