--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Kevin</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>PaPaLarry</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -384,38 +431,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>117,000</td>
+<td>Norma1</td>
+<td>1,076,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Kevin</td>
-<td>115,000</td>
+<td>1,065,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>106,000</td>
+<td>Maryjean</td>
+<td>1,017,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Nana_Sharon</td>
-<td>102,000</td>
+<td>952,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>PaPaLarry</td>
-<td>86,000</td>
+<td>JoAnnmeme</td>
+<td>870,500</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Norma1</td>
-<td>76,000</td>
+<td>bill</td>
+<td>856,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>JoAnnmeme</td>
-<td>70,500</td>
+<td>PaPaLarry</td>
+<td>786,000</td>
 </tr>
 <tr>
 <td>8</td>
