--- a/index.html
+++ b/index.html
@@ -365,6 +365,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Kevin</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>PaPaLarry</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -378,37 +420,37 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>42,000</td>
+<td>52,000</td>
 </tr>
 <tr>
 <td>2</td>
+<td>Kevin</td>
+<td>34,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>29,000</td>
+</tr>
+<tr>
+<td>4t</td>
+<td>PaPaLarry</td>
+<td>26,000</td>
+</tr>
+<tr>
+<td>4t</td>
+<td>bill</td>
+<td>26,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>patc</td>
 <td>25,000</td>
 </tr>
 <tr>
-<td>3</td>
-<td>PaPaLarry</td>
-<td>24,000</td>
-</tr>
-<tr>
-<td>4</td>
-<td>Nana_Sharon</td>
-<td>23,000</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Kevin</td>
-<td>22,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>bill</td>
-<td>18,000</td>
-</tr>
-<tr>
 <td>7</td>
 <td>Norma1</td>
-<td>17,000</td>
+<td>21,000</td>
 </tr>
 </tbody>
 </table>
