--- a/scores/index.html
+++ b/scores/index.html
@@ -409,6 +409,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Kevin</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Maryjean</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -422,27 +464,27 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>52,000</td>
+<td>58,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Kevin</td>
-<td>34,000</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>29,000</td>
+<td>39,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>4</td>
 <td>PaPaLarry</td>
-<td>26,000</td>
+<td>34,000</td>
 </tr>
 <tr>
-<td>4t</td>
+<td>5</td>
 <td>bill</td>
-<td>26,000</td>
+<td>30,000</td>
 </tr>
 <tr>
 <td>6</td>
@@ -452,7 +494,7 @@
 <tr>
 <td>7</td>
 <td>Norma1</td>
-<td>21,000</td>
+<td>23,000</td>
 </tr>
 </tbody>
 </table>
