--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Kevin</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -420,32 +462,32 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>100,000</td>
+<td>108,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>83,000</td>
+<td>PaPaLarry</td>
+<td>90,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>PaPaLarry</td>
-<td>78,000</td>
+<td>Nana_Sharon</td>
+<td>87,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>bill</td>
-<td>62,000</td>
+<td>68,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Kevin</td>
-<td>58,000</td>
+<td>Norma1</td>
+<td>63,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Norma1</td>
-<td>53,000</td>
+<td>Kevin</td>
+<td>60,000</td>
 </tr>
 <tr>
 <td>7</td>
